--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -24,5 +24,16 @@
         <span><%= recipe.ingredients.count %> ingredients</span>
       <% end %>
     </div>
+
+    <% if recipe.tags.any? %>
+      <div class="mt-3 flex flex-wrap gap-1">
+        <% recipe.tags.limit(3).each do |tag| %>
+          <span class="text-xs bg-emerald-100 text-emerald-700 px-2 py-0.5 rounded-full"><%= tag.name %></span>
+        <% end %>
+        <% if recipe.tags.count > 3 %>
+          <span class="text-xs text-gray-400">+<%= recipe.tags.count - 3 %></span>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 <% end %>
