--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -43,6 +43,14 @@
           Source: <%= link_to @recipe.source_url.truncate(50), @recipe.source_url, target: "_blank", class: "text-emerald-600 hover:underline" %>
         </p>
       <% end %>
+
+      <% if @recipe.tags.any? %>
+        <div class="mt-3 flex flex-wrap gap-2">
+          <% @recipe.tags.each do |tag| %>
+            <%= link_to tag.name, recipes_path(tag: tag.name), class: "inline-block bg-emerald-100 text-emerald-800 text-sm px-3 py-1 rounded-full hover:bg-emerald-200" %>
+          <% end %>
+        </div>
+      <% end %>
     </header>
 
     <% if @recipe.images.attached? %>
